[gd_scene load_steps=3 format=3 uid="uid://bom8buu03rsy2"]

[ext_resource type="Script" uid="uid://d2trfaul28t3x" path="res://scripts/main_menu_screen.gd" id="1_01yto"]
[ext_resource type="PackedScene" uid="uid://blpuqc0ptgjxi" path="res://scenes/debug_terminal.tscn" id="3_sbf14"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_right = 7.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_01yto")

[node name="WelcomeLabel" type="Label" parent="."]
layout_mode = 2
offset_left = 8.0
offset_top = 9.0
offset_right = 1092.0
offset_bottom = 41.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -1.0
offset_right = -16.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 60

[node name="MainVBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TopNavHBox" type="HBoxContainer" parent="MarginContainer/MainVBox"]
layout_mode = 2

[node name="ComputerButton" type="Button" parent="MarginContainer/MainVBox/TopNavHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Computer"

[node name="BuildButton" type="Button" parent="MarginContainer/MainVBox/TopNavHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Build"

[node name="ExerciseButton" type="Button" parent="MarginContainer/MainVBox/TopNavHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Exercise"

[node name="ArchiveButton" type="Button" parent="MarginContainer/MainVBox/TopNavHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Archive"

[node name="ContentHBox" type="HBoxContainer" parent="MarginContainer/MainVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="DebugTerminal" parent="." instance=ExtResource("3_sbf14")]
